add category feature
