# src/main/java/com/pycogroup/superblog/model/Article.java
@@ -1,15 +1,16 @@
 package com.pycogroup.superblog.model;
 
-import lombok.Builder;
-import lombok.Getter;
-import lombok.Setter;
+import lombok.*;
 import org.bson.types.ObjectId;
 import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.DBRef;
+
 import org.springframework.data.mongodb.core.mapping.Document;
+
 
 @Document(collection = "articles")
 @Builder
+@NoArgsConstructor
+@AllArgsConstructor
 public class Article {
 	@Id
 	@Getter
@@ -19,14 +20,15 @@ public class Article {
 	@Setter
 	private String title;
 
-
 	@Getter
 	@Setter
 	private String content;
 
 	@Getter
 	@Setter
-	@DBRef
 	private User author;
 
+	@Getter
+	@Setter
+	private Category category;
 }
